# WiseNotes

./: .env  Cargo.toml  LICENSE  db  server_logs.txt
migrations/2022-10-31-095656_books/: down.sql  up.sql
src/: .env  Things_I_Learned.txt  api_modules.rs  guards.rs  main.rs  models.rs  schema.rs  tests.rs  utils.rs
src/api/book_notes/: book_notes_dao.rs  book_notes_handlers.rs
src/api/book_relationship_types/: book_relationship_types_dao.rs  book_relationship_types_handlers.rs
src/api/books/: books_dao.rs  books_handlers.rs
src/api/books_relationships/: books_relationships_dao.rs  books_relationships_handlers.rs
src/api/categories/: categories_dao.rs  categories_handlers.rs
src/api/text_fragments/: text_fragments_dao.rs  text_fragments_handlers.rs
src/api/users/: users_dao.rs  users_handlers.rs
src/ml_scripts/: image_to_text.py
src/utils/: logger.rs  machine_learning_scripts.rs
