[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
actix-web = "4"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "2.7.0"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng"
]
